treatment block: reindex currentTurn, save error logging into qualtrics

--- a/treatment_block.html
+++ b/treatment_block.html
@@ -8,7 +8,9 @@
 <div style="padding:15px; background:#4267B2; color:white; font-size:18px; font-weight:bold; border-top-left-radius:10px; border-top-right-radius:10px;">Chat</div>
 
 <div style="flex:1; padding:15px; overflow-y:auto; display:flex; flex-direction:column; gap:10px;" id="chatBox">
-<div style="display:none;" id="LLM1_dot">
+<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user1_msg">UserPlaceholder</div>
+
+<div style="display:none; align-self:flex-start;" id="LLM1_dot">
 <div style="padding:10px 20px; background:#e0e0e0; border-radius:20px; display:inline-block;">
 <div class="dot">&nbsp;</div>
 
@@ -20,9 +22,9 @@
 
 <div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM1_msg">LLMPlaceholder</div>
 
-<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user1_msg">UserPlaceholder</div>
+<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user2_msg">UserPlaceholder</div>
 
-<div style="display:none;" id="LLM2_dot">
+<div style="display:none; align-self:flex-start;" id="LLM2_dot">
 <div style="padding:10px 20px; background:#e0e0e0; border-radius:20px; display:inline-block;">
 <div class="dot">&nbsp;</div>
 
@@ -34,9 +36,9 @@
 
 <div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM2_msg">LLMPlaceholder</div>
 
-<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user2_msg">UserPlaceholder</div>
+<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user3_msg">UserPlaceholder</div>
 
-<div style="display:none;" id="LLM3_dot">
+<div style="display:none; align-self:flex-start;" id="LLM3_dot">
 <div style="padding:10px 20px; background:#e0e0e0; border-radius:20px; display:inline-block;">
 <div class="dot">&nbsp;</div>
 
@@ -48,9 +50,9 @@
 
 <div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM3_msg">LLMPlaceholder</div>
 
-<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user3_msg">UserPlaceholder</div>
+<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user4_msg">UserPlaceholder</div>
 
-<div style="display:none;" id="LLM4_dot">
+<div style="display:none; align-self:flex-start;" id="LLM4_dot">
 <div style="padding:10px 20px; background:#e0e0e0; border-radius:20px; display:inline-block;">
 <div class="dot">&nbsp;</div>
 
@@ -62,9 +64,9 @@
 
 <div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM4_msg">LLMPlaceholder</div>
 
-<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user4_msg">UserPlaceholder</div>
+<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user5_msg">UserPlaceholder</div>
 
-<div style="display:none;" id="LLM5_dot">
+<div style="display:none; align-self:flex-start;" id="LLM5_dot">
 <div style="padding:10px 20px; background:#e0e0e0; border-radius:20px; display:inline-block;">
 <div class="dot">&nbsp;</div>
 
@@ -75,8 +77,6 @@
 </div>
 
 <div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM5_msg">LLMPlaceholder</div>
-
-<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user5_msg">UserPlaceholder</div>
 
 <div style="display:none; align-self:center; color:#555; font-style:italic; margin-top:10px;" id="chatNotice">&nbsp;</div>
 </div>
