add user6, llm6, user7, llm7 to html

--- a/treatment_block.html
+++ b/treatment_block.html
@@ -78,6 +78,34 @@
 
 <div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM5_msg">LLMPlaceholder</div>
 
+<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user6_msg">UserPlaceholder</div>
+
+<div style="display:none; align-self:flex-start;" id="LLM6_dot">
+<div style="padding:10px 20px; background:#e0e0e0; border-radius:20px; display:inline-block;">
+<div class="dot">&nbsp;</div>
+
+<div class="dot">&nbsp;</div>
+
+<div class="dot">&nbsp;</div>
+</div>
+</div>
+
+<div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM6_msg">LLMPlaceholder</div>
+
+<div style="align-self:flex-end; background:#0084ff; color:white; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="user7_msg">UserPlaceholder</div>
+
+<div style="display:none; align-self:flex-start;" id="LLM7_dot">
+<div style="padding:10px 20px; background:#e0e0e0; border-radius:20px; display:inline-block;">
+<div class="dot">&nbsp;</div>
+
+<div class="dot">&nbsp;</div>
+
+<div class="dot">&nbsp;</div>
+</div>
+</div>
+
+<div style="align-self:flex-start; background:#e4e6eb; padding:10px 15px; border-radius:20px; max-width:70%; display:none;" id="LLM7_msg">LLMPlaceholder</div>
+
 <div style="display:none; align-self:center; color:#555; font-style:italic; margin-top:10px;" id="chatNotice">&nbsp;</div>
 </div>
 
